Fixing images on small screens.

--- a/data/global.css
+++ b/data/global.css
@@ -70,6 +70,7 @@ blockquote {
 	display: block;
 	margin: auto;
 	max-width: 650px;
+	width: 100%;
 }
 .content img.icon {
 	display: inline;
